--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,11 @@
 <resources>
 	<string name="app_name">Genesis Chess Beta</string>
 	<string name="register_notice">
-		NOTICE: Accounts must be verified before logging in.
-		An activation link will be sent to the email address.
+		NOTICE: A valid email address must be used to activate the account.
+	</string>
+	<string name="register_activation">
+		Your account\'s email address must be verified before logging in.
+		An activation link has been sent to the email address used to register.\n\nPlease
+		make sure that your spam filter doesn\'t block:\n\tnoreply@genesischess.com
 	</string>
 </resources>
