add register confirmation
The registration activity needs a confirmation dialog so the user
can make sure they've entered their account correctly.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,7 @@
 		Are you sure you want to logout of your account?
 		Online games will be unavailable until you login.
 	</string>
+	<string name="register_confirm">
+		Are you sure you want to register an account with the following information?
+	</string>
 </resources>
