add resign from game
Add an options menu item to resign from the game. It displays the
endgame dialog after contacting the server for the game status.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,4 +23,7 @@
 	<string name="register_confirm">
 		Are you sure you want to register an account with the following information?
 	</string>
+	<string name="resign_confirm">
+		Are you sure you want to resign from this game? You will lose PSR if this is a random game.
+	</string>
 </resources>
