add copy game to local
add a context menu item to online & archive games that makes a
local game copy of the game. The game name is "white & black"
with white/black being the usernames of the game being copied.
The time is set to the current time.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,7 @@
 	<string name="resign_confirm">
 		Are you sure you want to resign from this game? You will lose PSR if this is a random game.
 	</string>
+	<string name="copygame_confirm">
+		Are you sure you want to make a local copy this game?
+	</string>
 </resources>
