add CpuTimeDialog to dynamically change the CPU search time
This adds a game menu item for local games to open a dialog
that sets the CPU time limit. Current range is 1-30 seconds.
The dialog also has an approximate strength based on BogoMips.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,4 +29,7 @@
 	<string name="copygame_confirm">
 		Are you sure you want to make a local copy this game?
 	</string>
+	<string name="cputime_msg">
+		Set the time alloted for the computer to think. Longer times makes the computer stronger.
+	</string>
 </resources>
