--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,4 +32,7 @@
 	<string name="cputime_msg">
 		Set the time alloted for the computer to think. Longer times makes the computer stronger.
 	</string>
+	<string name="feedback_url">
+		https://docs.google.com/spreadsheet/viewform?formkey=dEVMcnVvbDFMWkZ0azNyQ2hRR3RjZWc6MQ
+	</string>
 </resources>
