add "searching for opponent" and GamePoolDialog
Add a TextView above the swipetabs in OnlineGameList which shows
the status of the current user's games he's waiting for (the pool).
Clicking it will bring up a dialog with more information about what
game type and time added. The textview will be hidden if the user
is not waiting for a game.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,4 +35,7 @@
 	<string name="feedback_url">
 		https://docs.google.com/spreadsheet/viewform?formkey=dEVMcnVvbDFMWkZ0azNyQ2hRR3RjZWc6MQ
 	</string>
+	<string name="gamepool_info">
+		You are waiting to be matched with an opponent in the following game types:
+	</string>
 </resources>
