add "read all messages" menu and dialog
Add a new menu and dialog for marking all messages as read. This is
useful when logging in on a new device; all messages will be marked
as unread eventhough they've been read on another device.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,4 +38,7 @@
 	<string name="gamepool_info">
 		You are waiting to be matched with an opponent in the following game types:
 	</string>
+	<string name="readallmsgs">
+		Are you sure you want to mark all messages as read?
+	</string>
 </resources>
