add database clear/resync section to Settings
Each database table now has a settings preference. For local games
it deletes everything. For the network related tables it performs
a full resync to make sure all data is on the device.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,4 +41,16 @@
 	<string name="readallmsgs">
 		Are you sure you want to mark all messages as read?
 	</string>
+	<string name="deleteLocalTable">
+		Are you sure you want to delete all local games? This operation can not be undone!
+	</string>
+	<string name="resyncOnlineTable">
+		Are you sure you want to force a full resync of all active games?
+	</string>
+	<string name="resyncArchiveTable">
+		Are you sure you want to force a full resync of all archive games?
+	</string>
+	<string name="resyncMsgTable">
+		Are you sure you want to force a full resync of all game messages?
+	</string>
 </resources>
