--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,12 @@
 	<string name="resign_confirm">
 		Are you sure you want to resign from this game? You will lose PSR if this is a random game.
 	</string>
+	<string name="nudge_confirm">
+		Are you sure you want to Nudge your opponent? This will email them and give them one week to move before you can close the game.
+	</string>
+	<string name="idleresign_confirm">
+		Your opponent has been idle. Are you sure you want to force close the game?
+	</string>
 	<string name="copygame_confirm">
 		Are you sure you want to make a local copy this game?
 	</string>
