reword register activation dialog

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,9 +6,8 @@
 		NOTICE: A valid email address must be used to activate the account.
 	</string>
 	<string name="register_activation">
-		Your account\'s email address must be verified before logging in.
-		An activation link has been sent to the email address used to register.\n\nPlease
-		make sure that your spam filter doesn\'t block:\n\tactivation@genesischess.com
+		You must verify your email before logging in. A verification email has been sent.
+		Make sure that your spam filter didn\'t block:\n\tnotification@genesischess.com
 	</string>
 	<string name="delete_local">
 		Are you sure you want to delete this game? The game can not be recovered.
