--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -70,4 +70,9 @@
 	<string name="draw_pending">
 		Your opponent has neither accepted or declined your offer of a draw.
 	</string>
+	<string name="genesis_rules">
+		Warning. Genesis chess is not a typical chess game! Please read the full rules.\n\n
+		1) The board starts out blank.\n\t\t(hint: place a king first)\n
+		2) Pawns are awsome!\n\t\t(hint: they can move backwards)
+	</string>
 </resources>
