--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name">Genesis Chess Beta</string>
+	<string name="app_name">Genesis Chess</string>
 	<string name="version">1.12.7</string>
 	<string name="register_notice">
 		NOTICE: A valid email address must be used to activate the account.
